@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - Make group to change analysis directories to optional
  - use LSB_BIND_CPU_LIST over LSB_MCPU_HOSTS to determine number of threads to use
    within a job (cope with hyperthreading where LSF gives one slot to what is presented
    as two cpu - this will try to make use of apparent CPUs)
